Add ISO image building

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 # Ignore all files in the notes folder
+/notes/
 /notes/*
 
 # Ignore build directory
+/build/
 /build/*
+
+# Ignore the ISO directory needed for ISO file creation
+/iso/
+/iso/*
+
+# Ignore all iso files
+/*.iso
