--- a/boot/legacy/Makefile
+++ b/boot/legacy/Makefile
@@ -1,5 +1,12 @@
+# /* Copyright (C) 2023 Michał Pazurek - All Rights Reserved
+#  * This file is part of the "AmberOS" project
+#  * Unauthorized copying of this file, via any medium is strictly prohibited
+#  * Proprietary and confidential
+#  * Written by Michał Pazurek <michal10.05.pk@gmail.com>
+# */
+
 OUTPUT_DIR = ./../../build/boot
-OUTPUT_FILES = mbr.bin bootrec.bin bootext.bin
+OUTPUT_FILES = mbr.bin isoboot.bin bootrec.bin bootext.bin
 
 build: $(OUTPUT_FILES)
 
