Legacy loader - jump to C. Added bios call wrapper

--- a/boot/legacy/Makefile
+++ b/boot/legacy/Makefile
@@ -8,7 +8,7 @@
 OUTPUT_DIR = ./../../build/AmberOS
 OUTPUT_FILES = mbr.bin
 
-FS_SPECIFIC_MAKEFILES = EXT2/Makefile FAT32/Makefile ISO9660/Makefile
+FS_SPECIFIC_MAKEFILES = EXT2/Makefile FAT32/Makefile ISO9660/Makefile loader/Makefile
 
 build: $(OUTPUT_FILES) $(FS_SPECIFIC_MAKEFILES)
 
