Reading boot configuration from boot.cfg file

--- a/configuration/boot.cfg
+++ b/configuration/boot.cfg
@@ -1,3 +1,9 @@
+[CPU SETTINGS]
+> MODE: x86_64
+
+[MEMORY SETTINGS]
+> USE 1G PAGES: false
+
 [SCREEN SETTINGS]
 > VERTICAL RESOLUTION: 1024
 > HORIZONTAL RESOLUTION: 768
