--- a/boot/legacy/loader/Makefile
+++ b/boot/legacy/loader/Makefile
@@ -5,24 +5,31 @@
 #  * Written by Michał Pazurek <michal10.05.pk@gmail.com>
 # */
 
-OUTPUT_DIR = ./../../../build/boot
-OUTPUT_FILE = amberldr.bin
-OBJ_FILES = ldrentry.o bios_call_wrapper.o amberldr.o
-CC_FLAGS = -m32 -ffreestanding -fno-PIC -fno-PIE -I../../../include
-LD_FLAGS = -melf_i386 -T ldr.ld
+OUTPUT_DIR = 	$(PROJECT_DIR)/build/boot
+OBJ_DIR = 		$(PROJECT_DIR)/obj/boot
+
+OUTPUT_FILE = 	$(OUTPUT_DIR)/amberldr.bin
+
+OBJ_FILES = 	$(OBJ_DIR)/ldrentry.o \
+				$(OBJ_DIR)/bios_call_wrapper.o \
+				$(OBJ_DIR)/amberldr.o
+
+LD_FLAGS = 		-melf_i386 -T ldr.ld
 
 build: $(OUTPUT_FILE)
+	@echo "$(COLOR_OK)[Legacy loader compiled]$(COLOR_RESET)"
 
 $(OUTPUT_FILE): $(OBJ_FILES)
-	@echo "[Linking $^ --> $@]"
-	@mkdir -p $(OUTPUT_DIR)
-	@ld $(LD_FLAGS) $(OBJ_FILES) -o $(OUTPUT_DIR)/$@
-	@rm -rf *.o
+	@echo "[Linking $(^F) --> $(@F)]"
+	@mkdir -p $(@D)
+	@$(LD) $(LD_FLAGS) $(OBJ_FILES) -o $@
 
-%.o: %.c
-	@echo "[Compiling $^ --> $@]"
-	@gcc $(CC_FLAGS) -c $^ -o $@
+$(OBJ_DIR)/%.o: %.c
+	@echo "[Compiling $(^F) --> $(@F)]"
+	@mkdir -p $(@D)
+	@$(CC) $(LOADER_CC_FLAGS) -c $^ -o $@
 
-%.o: %.asm
-	@echo "[Compiling $^ --> $@]"
+$(OBJ_DIR)/%.o: %.asm
+	@echo "[Compiling $(^F) --> $(@F)]"
+	@mkdir -p $(@D)
 	@nasm -felf32 $^ -o $@
