--- a/boot/legacy/mbr/Makefile
+++ b/boot/legacy/mbr/Makefile
@@ -5,12 +5,15 @@
 #  * Written by Michał Pazurek <michal10.05.pk@gmail.com>
 # */
 
-OUTPUT_DIR = ./../../../build/AmberOS
-OUTPUT_FILES = mbr.bin isohd.bin
+OUTPUT_DIR = 	$(PROJECT_DIR)/build/AmberOS
+
+OUTPUT_FILES = 	$(OUTPUT_DIR)/mbr.bin \
+				$(OUTPUT_DIR)/isohd.bin
 
 build: $(OUTPUT_FILES)
+	@echo "$(COLOR_OK)[MBR files compiled]$(COLOR_RESET)"
 
-%.bin: %.asm
-	@echo "[Compiling $^ --> $@]"
-	@mkdir -p $(OUTPUT_DIR)
-	@nasm -f bin $^ -o $(OUTPUT_DIR)/$@
+$(OUTPUT_DIR)/%.bin: %.asm
+	@echo "[Compiling $(^F) --> $(@F)]"
+	@mkdir -p $(@D)
+	@nasm -f bin $^ -o $@
