--- a/kernel/cpu/Makefile
+++ b/kernel/cpu/Makefile
@@ -5,13 +5,17 @@
 #  * Written by Michał Pazurek <michal10.05.pk@gmail.com>
 # */
 
-OBJ_DIR = ./../../obj
-OBJ_FILES = cpuid.o sse.o avx.o ermsb.o
-CC_FLAGS = -m64 -ffreestanding -I../../include
+OBJ_DIR 	= $(PROJECT_DIR)/obj/kernel
+
+OBJ_FILES 	= $(OBJ_DIR)/cpuid.o \
+			  $(OBJ_DIR)/sse.o \
+			  $(OBJ_DIR)/avx.o \
+			  $(OBJ_DIR)/ermsb.o
 
 build: $(OBJ_FILES)
+	@echo "$(COLOR_OK)[CPU kernel components compiled]$(COLOR_RESET)"
 
-%.o: %.cpp
-	@echo "[Compiling $^ --> $@]"
-	@mkdir -p $(OBJ_DIR)
-	@g++ $(CC_FLAGS) -c $^ -o $(OBJ_DIR)/$@
+$(OBJ_DIR)/%.o: %.cpp
+	@echo "[Compiling $(^F) --> $(@F)]"
+	@mkdir -p $(@D)
+	@$(CXX) $(CXX_FLAGS) -c $^ -o $@
